manifests/mxisd/02-deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    image.openshift.io/triggers: |
      [
        {"from":{"kind":"ImageStreamTag","name":"mxisd:stable"},"fieldPath":"spec.template.spec.containers[?(@.name==\"mxisd\")].image"}
      ]
  labels:
    app: synapse
    service: mxisd
  name: mxisd
  namespace: matrix
spec:
  replicas: 1
  selector:
    deploymentconfig: mxisd
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: synapse
        service: mxisd
        deploymentconfig: mxisd
    spec:
      containers:
        - image: ''
          imagePullPolicy: Always
          name: mxisd
          volumeMounts:
          - mountPath: /etc/mxisd
            name: volume-config
          - mountPath: /var/mxisd
            name: volume-data
          ports:
            - containerPort: 8090
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: mxisd-config
        name: volume-config
      - name: volume-data
        emptyDir: {}
  test: false
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - mxisd
        from:
          kind: ImageStreamTag
          name: 'mxisd:stable'
      type: ImageChange
    - type: ConfigChange
