manifests/mxisd/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: synapse
    service: mxisd
  name: mxisd
  namespace: matrix
spec:
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    deploymentconfig: mxisd
  sessionAffinity: None
  type: ClusterIP
