manifests/mxisd/04-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: synapse
    service: mxisd
  name: mxisd
  namespace: matrix
spec:
  host: matrix-matrix.apps.vrutkovs-2.devcluster.openshift.com
  path: /_matrix/identity/
  port:
    targetPort: 8090
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: mxisd
    weight: 100
  wildcardPolicy: None
